Testing layout for ranking.html

--- a/ranking.html
+++ b/ranking.html
@@ -72,6 +72,39 @@
     </div>
 
     <!-- BODY Content -->
+    <div class="leaderboard">
+        <table class="table mx-auto leader-table table-borderless mt-5 text-center align-middle table-striped ">
+            <thead>
+              <tr>
+                <th scope="col">#</th>
+                <th scope="col">NAME</th>
+                <th scope="col">SERVER</th>
+                <th scope="col">WAVE</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <th scope="row"><img src="images/firstlg.png" width="50px" height="auto"></th>
+                <td class="text-warning">Caprice</td>
+                <td class="text-warning">NA</td>
+                <td class="text-warning">999</td>
+              </tr>
+              <tr>
+                <th scope="row"><img src="images/second.png"></th>
+                <td class="text-warning">Caprice</td>
+                <td class="text-warning">NA</td>
+                <td class="text-warning">999</td>
+              </tr>
+              <tr>
+                <th scope="row"><img src="images/third.png"></th>
+                <td class="text-warning" >Caprice</td>
+                <td class="text-warning">@NA</td>
+                <td class="text-warning">999</td>
+              </tr>
+            </tbody>
+          </table>
+    </div>
+
 
 
 </body>
