Fixed pathing for ranking.html

--- a/ranking.html
+++ b/ranking.html
@@ -25,7 +25,7 @@
                 <div class="navbar-brand mx-5">RANKING</div>
             </div>
             <div>
-                <a href="../index.html" class="btn btn-secondary"><i class="fa-solid fa-arrow-right-to-bracket fa-flip-horizontal fa-lg"></i></a>
+                <a href="index.html" class="btn btn-secondary"><i class="fa-solid fa-arrow-right-to-bracket fa-flip-horizontal fa-lg"></i></a>
             </div>
             <button class="btn btn-secondary ms-4">
                 <a href="ranking.html" class="text-light"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trophy-fill" viewBox="0 0 16 16">
