--- a/ranking.html
+++ b/ranking.html
@@ -67,7 +67,7 @@
     </div>
 
     <!-- BODY Content -->
-    <div class="leaderboard">
+    <div class="leaderboard mx-4">
         <table class="table mx-auto leader-table table-borderless mt-5 text-center align-middle table-striped ">
             <thead>
               <tr>
