--- a/ranking.html
+++ b/ranking.html
@@ -67,8 +67,8 @@
     </div>
 
     <!-- BODY Content -->
-    <div class="leaderboard mx-4">
-        <table class="table mx-auto leader-table table-borderless mt-5 text-center align-middle table-striped ">
+    <div class="leaderboard">
+        <table class="table-responsive mx-auto leader-table table-borderless mt-5 text-center align-middle table-striped ">
             <thead>
               <tr>
                 <th scope="col">#</th>
