Adding mutators-layout

--- a/ranking.html
+++ b/ranking.html
@@ -22,7 +22,7 @@
                 <div class="navbar-toggler-icon"></div>
             </button>
             <div>
-                <div class="navbar-brand mx-5">RANKING</div>
+                <div class="navbar-brand mx-5">MUTATORS</div>
             </div>
             <div>
                 <a href="index.html" class="btn btn-secondary"><i class="fa-solid fa-arrow-right-to-bracket fa-flip-horizontal fa-lg"></i></a>
@@ -35,7 +35,6 @@
             <h2 class="offcanvas-title me-5">CLASSES</h2>
             <button type="button" class="btn-close bg-light" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
-
         <div class="offcanvas-body">
             <ul class="nav flex-column rounded-4 ms-5">
                 <li class="nav-item">
@@ -67,40 +66,81 @@
     </div>
 
     <!-- BODY Content -->
-    <div class="leaderboard">
-        <table class="table-responsive mx-auto leader-table table-borderless mt-5 text-center align-middle table-striped ">
-            <thead>
-              <tr>
-                <th scope="col">#</th>
-                <th scope="col">NAME</th>
-                <th scope="col">SERVER</th>
-                <th scope="col">WAVE</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <th scope="row"><img src="images/firstlg.png" width="50px" height="auto"></th>
-                <td class="text-warning">Caprice</td>
-                <td class="text-warning">NA</td>
-                <td class="text-warning">999</td>
-              </tr>
-              <tr>
-                <th scope="row"><img src="images/second.png"></th>
-                <td class="text-warning">Caprice</td>
-                <td class="text-warning">NA</td>
-                <td class="text-warning">999</td>
-              </tr>
-              <tr>
-                <th scope="row"><img src="images/third.png"></th>
-                <td class="text-warning" >Caprice</td>
-                <td class="text-warning">@NA</td>
-                <td class="text-warning">999</td>
-              </tr>
-            </tbody>
-          </table>
+    <div class="py-3 mutate">
+
+        <div class="list-group my-2 px-2 mutate-list mx-auto">
+            <div class="card mx-auto trans d-flex flex-row p-3 w-100">
+                <div class="col-md-4 align-self-center text-center">
+                    <img src="./images/comfortZone.png" class="img rounded-start">
+                </div>
+                <div class="card-body text-light p-2">
+                    <h5 class="card-title">Comfort Zone</h5>
+                    <p class="card-text">You will slowly lose your health (2% of health per second) when there are no teammates within 5 meters (16 feet) of you for more than 5 seconds.</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="list-group my-2 px-2 mutate-list mx-auto">
+            <div class="card mx-auto trans d-flex flex-row p-3 w-100">
+                <div class="col-md-4 align-self-center text-center">
+                    <img src="./images/comfortZone.png" class="img rounded-start">
+                </div>
+                <div class="card-body text-light p-2">
+                    <h5 class="card-title">Personal Space</h5>
+                    <p class="card-text">You will slowly lose your health (2% of health per second) when there is at least one teammate within 5 meters (16 feet) of you for more than 5 seconds.</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="list-group my-2 px-2 mutate-list mx-auto">
+            <div class="card mx-auto trans d-flex flex-row p-3 w-100">
+                <div class="col-md-4 align-self-center text-center">
+                    <img src="./images/comfortZone.png" class="img rounded-start">
+                </div>
+                <div class="card-body text-light p-2">
+                    <h5 class="card-title">Hunger</h5>
+                    <p class="card-text">You will begin to slowly lose your health 10 seconds after your last zombie kill (0.5% of health per second).</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="list-group my-2 px-2 mutate-list mx-auto">
+            <div class="card mx-auto trans d-flex flex-row p-3 w-100">
+                <div class="col-md-4 align-self-center text-center">
+                    <img src="./images/comfortZone.png" class="img rounded-start">
+                </div>
+                <div class="card-body text-light p-2">
+                    <h5 class="card-title">Hunger</h5>
+                    <p class="card-text">You will begin to slowly lose your health 10 seconds after your last zombie kill (0.5% of health per second).</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="list-group my-2 px-2 mutate-list mx-auto">
+            <div class="card mx-auto trans d-flex flex-row p-3 w-100">
+                <div class="col-md-4 align-self-center text-center">
+                    <img src="./images/comfortZone.png" class="img rounded-start">
+                </div>
+                <div class="card-body text-light p-2">
+                    <h5 class="card-title">Hunger</h5>
+                    <p class="card-text">You will begin to slowly lose your health 10 seconds after your last zombie kill (0.5% of health per second).</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="list-group my-2 px-2 mutate-list mx-auto">
+            <div class="card mx-auto trans d-flex flex-row p-3 w-100">
+                <div class="col-md-4 align-self-center text-center">
+                    <img src="./images/comfortZone.png" class="img rounded-start">
+                </div>
+                <div class="card-body text-light p-2">
+                    <h5 class="card-title">Hunger</h5>
+                    <p class="card-text">You will begin to slowly lose your health 10 seconds after your last zombie kill (0.5% of health per second).</p>
+                </div>
+            </div>
+        </div>
+
     </div>
-
-
 
 </body>
 
