--- a/ranking.html
+++ b/ranking.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="mutate">
 
 <head>
     <meta charset="UTF-8">
@@ -748,7 +748,7 @@
         <div class="list-group my-2 px-2 mutate-list mx-auto">
             <div class="card mx-auto trans d-flex flex-row p-3 w-100">
                 <div class="col-md-4 align-self-center text-center">
-                    <img src="./images/healingEx.png" class="img rounded-start">
+                    <img src="./images/healingEx.png" class="img rounded-start">    
                 </div>
                 <div class="card-body text-light p-2">
                     <h5 class="card-title">Healing Explosions</h5>
