Testing mobile behavior

--- a/ranking.html
+++ b/ranking.html
@@ -66,7 +66,7 @@
     </div>
 
     <!-- BODY Content -->
-    <div class="py-3 mutate">
+    <div class="my-3 mutate">
         <div class="h2 text-center text-light fst-italic">UNIQUE (one at a time)</div>
         <div class="list-group my-2 px-2 mutate-list mx-auto">
             <div class="card mx-auto trans d-flex flex-row p-3 w-100">
@@ -105,7 +105,7 @@
 
     <!-- CODE DIVISON -->
 
-    <div class="py-3 mutate">
+    <div class="my-3 mutate">
         <div class="h2 text-center text-light fst-italic">UNIQUE (one at a time)</div>
 
         <div class="list-group my-2 px-2 mutate-list mx-auto">
@@ -159,7 +159,7 @@
 
     <!-- CODE DIVISON -->
 
-    <div class="py-3 mutate">
+    <div class="my-3 mutate">
         <div class="h2 text-center text-light fst-italic">UNIQUE (one at a time)</div>
         <div class="list-group my-2 px-2 mutate-list mx-auto">
             <div class="card mx-auto trans d-flex flex-row p-3 w-100">
@@ -186,7 +186,7 @@
     </div>
 
     <!-- CODE DIVISON -->
-    <div class="py-3 mutate">
+    <div class="my-3 mutate">
         <div class="h2 text-center text-light fst-italic">UNIQUE (one at a time)</div>
         <div class="list-group my-2 px-2 mutate-list mx-auto">
             <div class="card mx-auto trans d-flex flex-row p-3 w-100">
@@ -214,7 +214,7 @@
 
 
     <!-- CODE DIVISON -->
-    <div class="py-3 mutate">
+    <div class="my-3 mutate">
         <div class="h2 text-center text-light fst-italic">UNIQUE (one at a time)</div>
         <div class="list-group my-2 px-2 mutate-list mx-auto">
             <div class="card mx-auto trans d-flex flex-row p-3 w-100">
@@ -242,7 +242,7 @@
 
 
     <!-- CODE DIVISON -->
-    <div class="py-3 mutate">
+    <div class="my-3 mutate">
         <div class="h2 text-center text-light fst-italic">UNIQUE (one at a time)</div>
         <div class="list-group my-2 px-2 mutate-list mx-auto">
             <div class="card mx-auto trans d-flex flex-row p-3 w-100">
@@ -291,7 +291,7 @@
     </div>
 
     <!-- CODE DIVISON -->
-    <div class="py-3 mutate">
+    <div class="my-3 mutate">
         <div class="h2 text-center text-light fst-italic">Common (several can be used at once)</div>
 
         <div class="list-group my-2 px-2 mutate-list mx-auto">
@@ -748,7 +748,7 @@
         <div class="list-group my-2 px-2 mutate-list mx-auto">
             <div class="card mx-auto trans d-flex flex-row p-3 w-100">
                 <div class="col-md-4 align-self-center text-center">
-                    <img src="./images/healingEx.png" class="img rounded-start">    
+                    <img src="./images/healingEx.png" class="img rounded-start">
                 </div>
                 <div class="card-body text-light p-2">
                     <h5 class="card-title">Healing Explosions</h5>
@@ -767,8 +767,8 @@
                 </div>
             </div>
         </div>
-
     </div>
+
 </body>
 
 </html>
