--- a/classP/v.html
+++ b/classP/v.html
@@ -27,6 +27,9 @@
             <div>
                 <a href="../weapon_pages/weapon.html" class="btn btn-secondary"><i class="fa-solid fa-arrow-right-to-bracket fa-flip-vertical fa-lg"></i></a>
             </div>
+            <div>
+                <a href="../ranking.html" class="btn btn-secondary ms-3"><i class="fa-solid fa-barcode"></i></a>
+            </div>
         </div>
     </nav>
 
