Added mutators / patches

--- a/ranking.html
+++ b/ranking.html
@@ -769,6 +769,127 @@
                     </div>
                 </div>
             </div>
+            <!-- NO ICON AVAILABLE YET -->
+            <div class="list-group my-2 px-2 mutate-list mx-auto">
+                <div class="card mx-auto trans d-flex flex-row p-3 w-100">
+                    <div class="col-md-4 align-self-center text-center">
+                        <img src="./images/#.png" class="img rounded-start">
+                    </div>
+                    <div class="card-body text-light p-2">
+                        <h5 class="card-title">Drone Army</h5>
+                        <p class="card-text">Each player receives a temporary drone.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="list-group my-2 px-2 mutate-list mx-auto">
+                <div class="card mx-auto trans d-flex flex-row p-3 w-100">
+                    <div class="col-md-4 align-self-center text-center">
+                        <img src="./images/#.png" class="img rounded-start">
+                    </div>
+                    <div class="card-body text-light p-2">
+                        <h5 class="card-title">Free Meds</h5>
+                        <p class="card-text">Free medicine becomes available in the main shop.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="list-group my-2 px-2 mutate-list mx-auto">
+                <div class="card mx-auto trans d-flex flex-row p-3 w-100">
+                    <div class="col-md-4 align-self-center text-center">
+                        <img src="./images/#.png" class="img rounded-start">
+                    </div>
+                    <div class="card-body text-light p-2">
+                        <h5 class="card-title">The Pursuers</h5>
+                        <p class="card-text">Players can encounter slow, more resilient zombies during the wave that can revive and pursue players until the end of the wave.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="list-group my-2 px-2 mutate-list mx-auto">
+                <div class="card mx-auto trans d-flex flex-row p-3 w-100">
+                    <div class="col-md-4 align-self-center text-center">
+                        <img src="./images/#.png" class="img rounded-start">
+                    </div>
+                    <div class="card-body text-light p-2">
+                        <h5 class="card-title">Free Supply</h5>
+                        <p class="card-text">Free gear bags become available in the main shop.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="list-group my-2 px-2 mutate-list mx-auto">
+                <div class="card mx-auto trans d-flex flex-row p-3 w-100">
+                    <div class="col-md-4 align-self-center text-center">
+                        <img src="./images/#.png" class="img rounded-start">
+                    </div>
+                    <div class="card-body text-light p-2">
+                        <h5 class="card-title">Sell-Out</h5>
+                        <p class="card-text">Defense kits start having a discount.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="list-group my-2 px-2 mutate-list mx-auto">
+                <div class="card mx-auto trans d-flex flex-row p-3 w-100">
+                    <div class="col-md-4 align-self-center text-center">
+                        <img src="./images/#.png" class="img rounded-start">
+                    </div>
+                    <div class="card-body text-light p-2">
+                        <h5 class="card-title">Taxes</h5>
+                        <p class="card-text">Defense kits start costing more.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="list-group my-2 px-2 mutate-list mx-auto">
+                <div class="card mx-auto trans d-flex flex-row p-3 w-100">
+                    <div class="col-md-4 align-self-center text-center">
+                        <img src="./images/#.png" class="img rounded-start">
+                    </div>
+                    <div class="card-body text-light p-2">
+                        <h5 class="card-title">Hot-Tempered Bull</h5>
+                        <p class="card-text">Each Bull's ground smash causes an explosion.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="list-group my-2 px-2 mutate-list mx-auto">
+                <div class="card mx-auto trans d-flex flex-row p-3 w-100">
+                    <div class="col-md-4 align-self-center text-center">
+                        <img src="./images/#.png" class="img rounded-start">
+                    </div>
+                    <div class="card-body text-light p-2">
+                        <h5 class="card-title">My Chainsaw and Me</h5>
+                        <p class="card-text">A random player gets an infinite ammo chainsaw without being able to use other weapons.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="list-group my-2 px-2 mutate-list mx-auto">
+                <div class="card mx-auto trans d-flex flex-row p-3 w-100">
+                    <div class="col-md-4 align-self-center text-center">
+                        <img src="./images/#.png" class="img rounded-start">
+                    </div>
+                    <div class="card-body text-light p-2">
+                        <h5 class="card-title">Electrical Resistant Skin</h5>
+                        <p class="card-text">Zombies gain full immunity to electricity, no longer take damage, but can still be stunned.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="list-group my-2 px-2 mutate-list mx-auto">
+                <div class="card mx-auto trans d-flex flex-row p-3 w-100">
+                    <div class="col-md-4 align-self-center text-center">
+                        <img src="./images/#.png" class="img rounded-start">
+                    </div>
+                    <div class="card-body text-light p-2">
+                        <h5 class="card-title">Especially Dangerous</h5>
+                        <p class="card-text">After the death of a special zombie, a poisonous cloud remains that disappears only at the stage of preparation for the wave.</p>
+                    </div>
+                </div>
+            </div>
+
         </div>
     </div>
 </body>
