--- a/classP/m.html
+++ b/classP/m.html
@@ -30,6 +30,7 @@
             <div>
                 <a href="../ranking.html" class="btn btn-secondary ms-3"><i class="fa-solid fa-barcode"></i></a>
             </div>
+            <button class="btn btn-secondary ms-2 random"><i class="fa-solid fa-shuffle"></i></button>
         </div>
     </nav>
 
