--- a/classP/hr.html
+++ b/classP/hr.html
@@ -22,15 +22,15 @@
                 <div class="navbar-toggler-icon"></div>
             </button>
             <div>
-                <div class="navbar-brand mx-5">HELLRAISER</div>
+                <div class="navbar-brand mx-1">HELLRAISER</div>
             </div>
             <div>
-                <a href="../weapon_pages/weapon.html" class="btn btn-secondary"><i class="fa-solid fa-arrow-right-to-bracket fa-flip-vertical fa-lg"></i></a>
+                <a href="../weapon_pages/weapon.html" class="btn btn-secondary mx-1"><i class="fa-solid fa-arrow-right-to-bracket fa-flip-vertical fa-lg"></i></a>
             </div>
             <div>
-                <a href="../ranking.html" class="btn btn-secondary ms-3"><i class="fa-solid fa-barcode"></i></a>
+                <a href="../ranking.html" class="btn btn-secondary mx-1"><i class="fa-solid fa-barcode"></i></a>
             </div>
-            <button class="btn btn-secondary ms-2 random"><i class="fa-solid fa-shuffle"></i></button>
+            <button class="btn btn-secondary mx-1 random"><i class="fa-solid fa-shuffle"></i></button>
         </div>
     </nav>
 
