Added horde page, testing layout

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
                 <a href="ranking.html" class="btn btn-secondary mx-1"><i class="fa-solid fa-barcode"></i></a>
             </div>
             <button class="btn btn-secondary mx-1 random"><i class="fa-solid fa-shuffle"></i></button>
+            <div>
+                <a href="horde.html" class="btn btn-secondary mx-1"><i class="fa-solid fa-trophy"></i></i></a>
+            </div>
         </div>
     </nav>
 
