--- a/horde.html
+++ b/horde.html
@@ -20,20 +20,14 @@
                 <div class="navbar-toggler-icon"></div>
             </button>
             <div>
-                <div class="navbar-brand mx-1">GUNSLINGER</div>
+                <div class="navbar-brand mx-1">HORDE</div>
             </div>
             <div>
-                <a href="weapon_pages/weapon.html" class="btn btn-secondary mx-1"><i class="fa-solid fa-arrow-right-to-bracket fa-flip-vertical fa-lg"></i></a>
+                <a href="index.html" class="btn btn-secondary"><i class="fa-solid fa-arrow-right-to-bracket fa-flip-horizontal fa-lg"></i></a>
             </div>
             <div>
                 <a href="ranking.html" class="btn btn-secondary mx-1"><i class="fa-solid fa-barcode"></i></a>
             </div>
-            <button class="btn btn-secondary mx-1 random">
-                <i class="fa-solid fa-shuffle"></i>
-            </button>
-            <button class="btn btn-secondary mx-1 random">
-                <i class="fa-solid fa-trophy"></i>
-            </button>
         </div>
     </nav>
 
