--- a/horde.html
+++ b/horde.html
@@ -16,56 +16,15 @@
     <!-- NAV Bar -->
     <nav class="navbar bg-dark">
         <div class="container navbar-dark justify-content-center">
-            <button class="btn btn-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcan" aria-controls="offcanvasExample">
-                <div class="navbar-toggler-icon"></div>
-            </button>
             <div>
                 <div class="navbar-brand mx-1">HORDE</div>
             </div>
             <div>
-                <a href="index.html" class="btn btn-secondary"><i class="fa-solid fa-arrow-right-to-bracket fa-flip-horizontal fa-lg"></i></a>
-            </div>
-            <div>
-                <a href="ranking.html" class="btn btn-secondary mx-1"><i class="fa-solid fa-barcode"></i></a>
+                <a href="index.html" class="btn btn-secondary ms-4"><i class="fa-solid fa-arrow-right-to-bracket fa-flip-horizontal fa-lg"></i></a>
             </div>
         </div>
     </nav>
 
-    <div class="offcanvas offcanvas-start text-bg-dark" tabindex="-1" id="offcan" aria-labelledby="offcanLabel" data-bs-scroll="true">
-        <div class="offcanvas-header justify-content-center my-2">
-            <h2 class="offcanvas-title me-5">CLASSES</h2>
-            <button type="button" class="btn-close bg-light" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-        </div>
-
-        <div class="offcanvas-body">
-            <ul class="nav flex-column rounded-4 ms-5">
-                <li class="nav-item">
-                    <a class="nav-link" href="index.html"><i class="fa-solid fa-gun"></i> Gunslinger</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="classP/hr.html"><i class="fa-solid fa-explosion"></i> Hellraiser</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="classP/m.html"><i class="fa-solid fa-suitcase-medical"></i> Medic</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="classP/f.html"><i class="fa-solid fa-screwdriver-wrench"></i> Fixer</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="classP/s.html"><i class="fa-solid fa-scissors"></i> Slasher</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="classP/ex.html"><i class="fa-solid fa-mask"></i> Exterminator</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="classP/dm.html"><i class="fa-solid fa-robot"></i> Drone Master</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="classP/v.html"><i class="fa-solid fa-shield-halved"></i> Vanguard</a>
-                </li>
-            </ul>
-        </div>
-    </div>
 
     <!-- BODY Content -->
 
@@ -76,7 +35,7 @@
                 <table class="table table-striped table-borderless table-dark rounded-5">
                     <thead>
                         <tr>
-                            <th colspan="4" class="text-center h2">XL Tokyo</th>
+                            <th colspan="4" class="text-center h2">XL Tokyo (H)</th>
                         </tr>
                         <tr>
                             <td colspan=4 class="table-img align-middle">
@@ -117,7 +76,7 @@
                 <table class="table table-striped table-borderless rounded-5 table-dark">
                     <thead>
                         <tr>
-                            <th colspan="4" class="text-center h2">XL Rome</th>
+                            <th colspan="4" class="text-center h2">XL Rome (H)</th>
                         </tr>
                         <tr>
                             <td colspan=4 class="table-img align-middle">
@@ -158,7 +117,7 @@
                 <table class="table table-striped table-borderless rounded-5 table-dark">
                     <thead>
                         <tr>
-                            <th colspan="4" class="text-center h2">South Korea</th>
+                            <th colspan="4" class="text-center h2">South Korea (H)</th>
                         </tr>
                         <tr>
                             <td colspan=4 class="table-img align-middle">
@@ -199,7 +158,7 @@
                 <table class="table table-striped table-borderless rounded-5 table-dark">
                     <thead>
                         <tr>
-                            <th colspan="4" class="text-center h2">New York</th>
+                            <th colspan="4" class="text-center h2">New York (H)</th>
                         </tr>
                         <tr>
                             <td colspan=4 class="table-img align-middle">
@@ -240,7 +199,7 @@
                 <table class="table table-striped table-borderless rounded-5 table-dark">
                     <thead>
                         <tr>
-                            <th colspan="4" class="text-center h2">Jerusalem</th>
+                            <th colspan="4" class="text-center h2">Jerusalem (H)</th>
                         </tr>
                         <tr>
                             <td colspan=4 class="table-img align-middle">
